--- a/ProjecteM7/app/src/main/res/layout-v26/activity_main.xml
+++ b/ProjecteM7/app/src/main/res/layout-v26/activity_main.xml
@@ -55,6 +55,7 @@
         android:id="@+id/btn_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="login"
         android:text="@string/sign_up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
