--- a/ProjecteM7/app/src/main/res/layout/registre.xml
+++ b/ProjecteM7/app/src/main/res/layout/registre.xml
@@ -79,10 +79,67 @@
         android:labelFor="@id/txt_contrasenya"
         android:importantForAutofill="no" />
 
+    <TextView
+        android:id="@+id/tv_sexe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sexe:"
+        android:textSize="24sp" />
+
+    <RadioButton
+        android:id="@+id/rb_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home" />
+
+    <RadioButton
+        android:id="@+id/rb_dona"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Dona" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Frase  que mes et defineix:"
+        android:textSize="24sp" />
+
+    <Spinner
+        android:id="@+id/sp_frase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_introvertit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Ets introvertit?"
+        android:textSize="24sp" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="false" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Et consideres divertit?"
+        android:textSize="24sp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Accepto l'us de les meves dades" />
+
     <Button
         android:id="@+id/btn_registrar"
-        android:layout_width="134dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:labelFor="@id/btn_registrar"
         android:text="@string/registrar" />
+
 </LinearLayout>
