--- a/ProjecteM7/app/src/main/res/layout/fragment_home.xml
+++ b/ProjecteM7/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:elevation="8dp"/>
 
 </RelativeLayout>
