--- a/ProjecteM7/app/src/main/res/values/colors.xml
+++ b/ProjecteM7/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3C3F41</color>
+    <color name="colorPrimaryDark">#3A3E6C</color>
+    <color name="colorAccent">#E60505</color>
+    <color name="textColorPrimary">#442C2E</color>
+    <color name="toolbarIconColor">@color/textColorPrimary</color>
+    <color name="loginPageBackgroundColor">#3C3F41</color>
+    <color name="productGridBackgroundColor">#3C3F41</color>
+    <color name="textInputOutlineColor">#FBB8AC</color>
 </resources>
