--- a/ProjecteM7/app/src/main/res/layout/activity_main.xml
+++ b/ProjecteM7/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Widget.Shrine.TextInputLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <EditText
         android:id="@+id/txt_Password"
+
+        style="@style/Widget.Shrine.TextInputLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -17,10 +19,12 @@
         android:labelFor="@id/txt_Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_User" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_User"
+        android:fontFamily="sans-serif-condensed-light"/>
 
     <EditText
         android:id="@+id/txt_User"
+        style="@style/Widget.Shrine.TextInputLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="250dp"
@@ -30,12 +34,14 @@
         android:labelFor="@id/txt_User"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="sans-serif-condensed-light"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-light"
         android:text="@string/user"
         app:layout_constraintBottom_toTopOf="@+id/txt_User"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +55,8 @@
         android:text="@string/password"
         app:layout_constraintBottom_toTopOf="@+id/txt_Password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="sans-serif-condensed-light"/>
 
     <Button
         android:id="@+id/btn_signup"
@@ -62,9 +69,11 @@
         app:layout_constraintHorizontal_bias="0.693"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_Password"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintVertical_bias="0.06"
+        android:fontFamily="sans-serif-condensed-light"/>
 
     <Button
+
         android:id="@+id/btn_registre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,6 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
+        android:fontFamily="sans-serif-condensed-light"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
