--- a/ProjecteM7/app/src/main/res/values-v21/styles.xml
+++ b/ProjecteM7/app/src/main/res/values-v21/styles.xml
@@ -1,8 +1,45 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-    </style>
+<!-- Base application theme. -->
+<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+    <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+    <item name="android:textColorPrimary">@color/textColorPrimary</item>
+</style>
+
+<style name="Widget.Shrine.Toolbar" parent="Widget.AppCompat.Toolbar">
+    <item name="android:background">?attr/colorAccent</item>
+    <item name="android:theme">@style/AppTheme</item>
+    <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
+    <item name="titleTextAppearance">@style/TextAppearance.Shrine.Toolbar</item>
+</style>
+
+<style name="TextAppearance.Shrine.Toolbar" parent="TextAppearance.MaterialComponents.Button">
+    <item name="android:textSize">16sp</item>
+</style>
+
+<style name="AppTheme.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+</style>
+
+<style name="Widget.Shrine.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <item name="hintTextAppearance">@style/TextAppearance.Shrine.TextInputLayout.HintText</item>
+
+    <item name="android:paddingBottom">8dp</item>
+    <item name="boxStrokeColor">@color/textInputOutlineColor</item>
+</style>
+
+<style name="TextAppearance.Shrine.TextInputLayout.HintText" parent="TextAppearance.MaterialComponents.Subtitle2">
+    <item name="android:textColor">?android:attr/textColorPrimary</item>
+</style>
+
+<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
 </resources>
