--- a/ProjecteM7/app/src/main/res/values/colors.xml
+++ b/ProjecteM7/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3C3F41</color>
+    <color name="colorPrimary">#E60505</color>
     <color name="colorPrimaryDark">#3A3E6C</color>
     <color name="colorAccent">#E60505</color>
     <color name="textColorPrimary">#442C2E</color>
