--- a/ProjecteM7/app/src/main/res/layout/activity_main.xml
+++ b/ProjecteM7/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_User"
-        android:fontFamily="sans-serif-condensed-light"/>
+        android:fontFamily="sans-serif-condensed-light" tools:targetApi="o"/>
 
     <EditText
         android:id="@+id/txt_User"
@@ -92,6 +92,7 @@
         android:layout_height="54dp"
         android:layout_marginStart="30dp"
         android:background="@drawable/bottom_en"
+        android:onClick="cambiaEn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_registre"
         app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
@@ -101,6 +102,7 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:background="@drawable/bottom_es"
+        android:onClick="cambiaEsp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_en"
         app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
@@ -110,6 +112,7 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:background="@drawable/bottom_cat"
+        android:onClick="cambiaCat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_es"
