--- a/ProjecteM7/app/src/main/res/layout/fragment_home.xml
+++ b/ProjecteM7/app/src/main/res/layout/fragment_home.xml
@@ -14,6 +14,8 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="8dp"/>
+        android:elevation="8dp"
+        android:minHeight="48dp"
+        />
 
 </RelativeLayout>
